# dmtools

./: README.md  dparser.groovy  roll.nim
difficulty/: Cargo.toml  README.adoc
difficulty/src/: cli.yml  difficulty.rs  main.rs
difficultycalc/: README.md  build.gradle
difficultycalc/gradle/wrapper/: gradle-wrapper.properties
difficultycalc/src/main/resources/: challenge_list.fxml  challenger_dialog.fxml  main.fxml
difficultycalculator-app/app/: build.gradle
difficultycalculator-app/gradle/wrapper/: gradle-wrapper.properties
encountercalc/: build.gradle  gradle.properties
encountercalc/gradle/wrapper/: gradle-wrapper.properties
spellbook-app/: README.md
spellbook-app/app/: README.md  build.gradle
spellbook-app/gradle/wrapper/: gradle-wrapper.properties
spellbooks/: .gitignore  README.md  TODO.md  build.gradle
spellbooks/gradle/wrapper/: gradle-wrapper.properties
treasure/: .gitignore  Cargo.toml  README.adoc  TODO.txt
treasure/src/: cli.yml  dice.rs  gems.rs  hoard_treasure.rs  individual_treasure.rs  main.rs  treasure.rs  treasure_definition.rs  valuables.rs
treasure/tables/: art-2500gp.csv  art-250gp.csv  art-25gp.csv  art-7500gp.csv  art-750gp.csv  gems-1000gp.csv  gems-100gp.csv  gems-10gp.csv  gems-5000gp.csv  gems-500gp.csv  gems-50gp.csv  hoard-0-4.csv  hoard-11-16.csv  hoard-17-up.csv  hoard-5-10.csv  individual-0-4.csv  individual-11-16.csv  individual-17-up.csv  individual-5-10.csv  magic-A.csv  magic-B.csv  magic-C.csv  magic-D.csv  magic-E.csv  magic-F.csv  magic-G.csv  magic-H.csv  magic-I.csv
(+114 files in other folders)
