[package]
name = "treasure"
version = "0.1.0"
authors = ["Christopher J. Stehno <chris@stehno.com>"]
edition = "2018"
description = "A table-based random treasure generator for D&D 5e."

[dependencies]
csv = "1"
serde = "1"
serde_derive = "1"
regex = "1"
rand = "0.6.5"
clap = {version = "2.32.0", features = ["yaml"]}
log = "0.4"
fern = "0.5.7"
rust-embed="4.3.0"